<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="356dp"
            android:layout_height="93dp"
            android:text="@string/welcome_messege"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="visible"
            tools:layout_editor_absoluteX="192dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bgcolor"
            android:onClick="chargeCard"
            android:text="@string/charge" />

        <Button
            android:id="@+id/getRased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="chargeClicked"
            android:text="@string/inquery" />

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="joinNet"
            android:text="@string/join_net" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="netBalance"
            android:text="@string/inquery_net" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfare_btn" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>